tests/test_files_pa3/external/errors/WrongMainSignature2.ic
class WrongMainSignature2{
	
	static string jojo(){
		return "jojo";
	}
	
	//Error: signature missing void
	static main (string[] args){
		WrongMainSignature2.jojo();
	} 
	
}